# training-ml

./: .gitignore  README.md  ch_llama  pyproject.toml  run.sh
ch_bert/: ko-sroberta.ipynb  ko_sroberta.ipynb  kobert_finetuning.ipynb  pymilvus.ipynb
ch_gpt/: koalpaca.ipynb  kogpt.ipynb  kogpt2.ipynb  quick_start.ipynb  transformers.ipynb
ch_langchain/: README.md  pyproject.toml  quick_start.ipynb  template.ipynb
ch_langchain/chatbot/: quick_start.ipynb
ch_langchain/data/: my_prompt.json
ch_langchain/vector_store/: qdrant.ipynb  quick_start.ipynb
ch_llm/: llm_2.ipynb
ch_llm_app/: README.md
ch_milvus/: README.md  pyproject.toml  quick_start.ipynb  with_bert.ipynb
ch_nlp/: huggingface.ipynb  quick_start.ipynb  transformers.ipynb
ch_recsys/: deepctr.ipynb  env.sh  pyproject.toml
ch_stable_diffusion/: quick_start.ipynb
ch_transformers/: README.md  distilbert.ipynb  pipeline.ipynb  pyproject.toml
ch_transformers/data/: test.csv
ch_vision/: huggingface.ipynb
