[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["karellen.kim <karellen.kim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.228"
openai = "^0.27.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
