[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["karellen.kim <karellen.kim@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"
google-search-results = "^2.4.2"
langchain = "^0.2.1"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.1"
langchain-chroma = "^0.1.1"
langchain-qdrant = "^0.1.0"
sentence-transformers = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
