[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["karellen.kim <karellen.kim@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
jupyter = "^1.0.0"
deepctr = "^0.9.3"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
tensorflow-macos = "^2.12.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
